--- a/Content/gauss-elim-pivoting.ipynb
+++ b/Content/gauss-elim-pivoting.ipynb
@@ -36,7 +36,8 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "from scipy.linalg import lu"
    ]
   },
   {
@@ -130,8 +131,94 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notice that, in this case, the pivot of the next Gauss transform is `2`. The pivot is not a small number. However, let's apply the partial pivoting for illustrating the procedure and showing that it does not change the final result."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this case, we interchange the first and second rows/elements of `A0`/`y0`. This is equivalent to premultiply `A0` and `y0` by the following matrix:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.  1.  0.]\n",
+      " [ 1.  0.  0.]\n",
+      " [ 0.  0.  1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "P1 = np.identity(3)[[1,0,2]]\n",
+    "\n",
+    "print P1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-3. -1.  2.]\n",
+      " [ 2.  1. -1.]\n",
+      " [-2.  1.  2.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print np.dot(P1, A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-11.]\n",
+      " [  8.]\n",
+      " [ -3.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print np.dot(P1, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notice that this row permutation changed the pivot from `2` to `-3`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -144,31 +231,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "t = np.array([[0.],\n",
-    "              [A[1][0]/A[0][0]],\n",
-    "              [A[2][0]/A[0][0]]])"
+    "              [np.dot(P1, A)[1][0]/np.dot(P1, A)[0][0]],\n",
+    "              [np.dot(P1, A)[2][0]/np.dot(P1, A)[0][0]]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "A1 = (I - t*u.T).dot(A)"
+    "A1 = (I - t*u.T).dot(np.dot(P1,A))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -176,12 +263,12 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 2. ,  1. , -1. ],\n",
-       "       [ 0. ,  0.5,  0.5],\n",
-       "       [ 0. ,  2. ,  1. ]])"
+       "array([[-3.        , -1.        ,  2.        ],\n",
+       "       [ 0.        ,  0.33333333,  0.33333333],\n",
+       "       [ 0.        ,  1.66666667,  0.66666667]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,18 +279,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "y1 = (I - t*u.T).dot(y)"
+    "y1 = (I - t*u.T).dot(np.dot(P1,y))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -211,12 +298,12 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 8.],\n",
-       "       [ 1.],\n",
-       "       [ 5.]])"
+       "array([[-11.        ],\n",
+       "       [  0.66666667],\n",
+       "       [  4.33333333]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,19 +316,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that, in this case, the pivot of the next Gauss transform is `0.5`. The pivot is not a small number. However, let's apply the partial pivoting for illustrating the procedure and showing that it does not change the final result."
+    "**Iteration 2:**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this case, we interchange the third and second rows/elements of `A1`/`y1`. This is equivalent to premultiply `A1` and `y1` by the following matrix:"
+    "Now, we interchange the second and third rows/elements of `A1`/`y1`. This is equivalent to premultiply `A1` and `y1` by the following matrix:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -257,82 +344,56 @@
     }
    ],
    "source": [
-    "P1 = np.identity(3)[[0,2,1]]\n",
+    "P2 = np.identity(3)[[0,2,1]]\n",
     "\n",
-    "print P1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "A1 = np.dot(P1, A1)\n",
-    "y1 = np.dot(P1, y1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 2.   1.  -1. ]\n",
-      " [ 0.   2.   1. ]\n",
-      " [ 0.   0.5  0.5]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print A1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 8.]\n",
-      " [ 5.]\n",
-      " [ 1.]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print y1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Notice that this row permutation changed the pivot from `0.5` to `2`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Iteration 2:**"
+    "print P2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-3.         -1.          2.        ]\n",
+      " [ 0.          1.66666667  0.66666667]\n",
+      " [ 0.          0.33333333  0.33333333]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print np.dot(P2, A1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-11.        ]\n",
+      " [  4.33333333]\n",
+      " [  0.66666667]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print np.dot(P2, y1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -345,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -353,53 +414,18 @@
    "source": [
     "t = np.array([[0.],\n",
     "              [0.],\n",
-    "              [A1[2][1]/A1[1][1]]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "B = (I - t*u.T).dot(A1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 2.  ,  1.  , -1.  ],\n",
-       "       [ 0.  ,  2.  ,  1.  ],\n",
-       "       [ 0.  ,  0.  ,  0.25]])"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "B"
+    "              [np.dot(P2, A1)[2][1]/np.dot(P2, A1)[1][1]]])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "z = (I - t*u.T).dot(y1)"
+    "B = (I - t*u.T).dot(np.dot(P2, A1))"
    ]
   },
   {
@@ -412,12 +438,47 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 8.  ],\n",
-       "       [ 5.  ],\n",
-       "       [-0.25]])"
+       "array([[-3.        , -1.        ,  2.        ],\n",
+       "       [ 0.        ,  1.66666667,  0.66666667],\n",
+       "       [ 0.        ,  0.        ,  0.2       ]])"
       ]
      },
      "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "z = (I - t*u.T).dot(np.dot(P2, y1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-11.        ],\n",
+       "       [  4.33333333],\n",
+       "       [ -0.2       ]])"
+      ]
+     },
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -465,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -498,10 +559,10 @@
     "$$\n",
     "\\begin{array}{ccccc}\n",
     "\\mathbf{A}^{(0)} = \\mathbf{A} & & & \\mathbf{y}^{(0)} = \\mathbf{y} \\\\\\\\\n",
-    "\\mathbf{A}^{(1)} = \\left(\\mathbf{I} - \\mathbf{M}^{(1)}\\right) \\mathbf{P}^{(1)}\\mathbf{A}^{(1)} & & &\n",
-    "\\mathbf{y}^{(1)} = \\left(\\mathbf{I} - \\mathbf{M}^{(1)}\\right) \\mathbf{P}^{(1)}\\mathbf{y}^{(1)} \\\\\\\\\n",
-    "\\mathbf{A}^{(2)} = \\left(\\mathbf{I} - \\mathbf{M}^{(2)}\\right) \\mathbf{P}^{(2)}\\mathbf{A}^{(2)} & & &\n",
-    "\\mathbf{y}^{(2)} = \\left(\\mathbf{I} - \\mathbf{M}^{(2)}\\right) \\mathbf{P}^{(2)}\\mathbf{y}^{(2)}\n",
+    "\\mathbf{A}^{(1)} = \\left(\\mathbf{I} - \\mathbf{M}^{(1)}\\right) \\mathbf{P}^{(1)}\\mathbf{A}^{(0)} & & &\n",
+    "\\mathbf{y}^{(1)} = \\left(\\mathbf{I} - \\mathbf{M}^{(1)}\\right) \\mathbf{P}^{(1)}\\mathbf{y}^{(0)} \\\\\\\\\n",
+    "\\mathbf{A}^{(2)} = \\left(\\mathbf{I} - \\mathbf{M}^{(2)}\\right) \\mathbf{P}^{(2)}\\mathbf{A}^{(1)} & & &\n",
+    "\\mathbf{y}^{(2)} = \\left(\\mathbf{I} - \\mathbf{M}^{(2)}\\right) \\mathbf{P}^{(2)}\\mathbf{y}^{(1)}\n",
     "\\end{array} \\: ,$$"
    ]
   },
@@ -509,8 +570,288 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where $\\mathbf{P}^{(k)}$ is the permutation matrix used to interchange the rows and perform the partial pivoting."
+    "where $\\mathbf{P}^{(k)}$ is the permutation matrix used to interchange the rows and perform the partial pivoting. Or, alternatively,"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\mathbf{C}^{(0)} = \\left[ \\: \\mathbf{A} \\: \\vert \\: \\mathbf{y} \\: \\right] \\: ,\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{array}{c}\n",
+    "\\mathbf{C}^{(1)} = \\left(\\mathbf{I} - \\mathbf{M}^{(1)}\\right) \\mathbf{P}^{(1)}\\mathbf{C}^{(0)} \\\\\\\\\n",
+    "\\mathbf{C}^{(2)} = \\left(\\mathbf{I} - \\mathbf{M}^{(2)}\\right) \\mathbf{P}^{(2)}\\mathbf{C}^{(1)} \n",
+    "\\end{array} \\: ,$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "where $\\mathbf{B} = \\mathbf{C}^{(2)}[ \\, : \\, , \\, :N]$ and $\\mathbf{z} = \\mathbf{C}^{(2)}[ \\, : \\, , \\, N+1]$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Gaussian elimination with partial pivoting can be implemented as follows:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    N = y.size\n",
+    "    C = np.hstack(np.copy(A), np.copy(y))\n",
+    "    D = np.identity(N)\n",
+    "    \n",
+    "    for i = 1:N-1\n",
+    "        \n",
+    "        # permutation step\n",
+    "        p, C = np.permut(C, i)\n",
+    "        D = D[p]\n",
+    "        \n",
+    "        # assert the pivot is nonzero\n",
+    "        assert C[i,i] != 0., 'null pivot!'\n",
+    "        \n",
+    "        # calculate the Gauss multipliers and store them \n",
+    "        # in the lower part of C\n",
+    "        C[i+1:,i] = C[i+1:,i]/C[i,i]\n",
+    "        \n",
+    "        # zeroing of the elements in the ith column\n",
+    "        C[i+1:,i+1:] = C[i+1:,i+1:] - outer(C[i+1:N,i], C[i,i+1:])\n",
+    "        \n",
+    "        return C[:,:N], C[:,N]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The permutation function can be defined as follows:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    permut (C, i):\n",
+    "        p = [j for j in range(C.shape[0])]\n",
+    "        imax = i + np.argmax(np.abs(C[i:,i]))\n",
+    "        if imax != i:\n",
+    "            p[i], p[imax] = p[imax], p[i]\n",
+    "        return p, C[p,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def permut(C,i):\n",
+    "    P = [j for j in range(C.shape[0])]\n",
+    "    imax = i + np.argmax(np.abs(C[i:,i]))\n",
+    "    P[i], P[imax] = P[imax], P[i]\n",
+    "    return P, C[P,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def outer(x,y):\n",
+    "    C = np.zeros((x.ravel().size,y.ravel().size))\n",
+    "    for i, c in enumerate(C):\n",
+    "        c += x[i]*y.ravel()\n",
+    "    return C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "N = y.size\n",
+    "C = np.hstack((A, y))\n",
+    "D = np.identity(N)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for i in range(N-1):\n",
+    "    \n",
+    "    p, C = permut(C,i)\n",
+    "    D = D[p]\n",
+    "        \n",
+    "    C[i+1:,i] = C[i+1:,i]/C[i,i]\n",
+    "    C[i+1:,i+1:] = C[i+1:,i+1:] - outer(C[i+1:,i], C[i,i+1:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.,  0.,  1.],\n",
+       "       [ 1.,  0.,  0.],\n",
+       "       [ 0.,  1.,  0.]])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "D.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ -3.        ,  -1.        ,   2.        , -11.        ],\n",
+       "       [  0.66666667,   1.66666667,   0.66666667,   4.33333333],\n",
+       "       [ -0.66666667,   0.2       ,   0.2       ,  -0.2       ]])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "P, L, U = lu(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.,  0.,  1.],\n",
+       "       [ 1.,  0.,  0.],\n",
+       "       [ 0.,  1.,  0.]])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "P"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.        ,  0.        ,  0.        ],\n",
+       "       [ 0.66666667,  1.        ,  0.        ],\n",
+       "       [-0.66666667,  0.2       ,  1.        ]])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "L"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-3.        , -1.        ,  2.        ],\n",
+       "       [ 0.        ,  1.66666667,  0.66666667],\n",
+       "       [ 0.        ,  0.        ,  0.2       ]])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "U"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
